# physical-ai-textbook

./: .gitignore  API_INTEGRATION.md  BACKEND_FIX_GUIDE.md  BILINGUAL_AUTH_IMPLEMENTATION.md  BILINGUAL_AUTH_USAGE_GUIDE.md  BRANCH_PROTECTION_SETUP.md  CHATBOT_SETUP.md  CHAT_INPUT_FIX_DEBUG.md  CI_CD_SETUP_GUIDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  Dockerfile  E2E_TESTS_GUIDE.md  E2E_TEST_VERIFICATION.md  EMPTY_RESPONSE_ISSUE.md  FIX_BLANK_ANSWERS.md  FIX_CLASS_NOT_AVAILABLE.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPORT_FIX_SUMMARY.md  INTEGRATION_FIX.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST_SUMMARY.txt  LICENSE.md  LOCAL_TEST_RESULTS.md  NEXT_STEP_EMBEDDING_FIX.md  PHASE3_IMPLEMENTATION_GUIDE.md  PHASE_7_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PYTHONPATH_FIX.md  Procfile  QUICK_TEST.md  RAG_DEPLOYMENT.md  README.md  SESSION_SUMMARY.md  (+20 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  main.py  pyproject.toml  requirements-prod.txt  requirements.txt  users_db.json  verify_setup.py
backend/api/: __init__.py  app.py  config.py  dependencies.py  models.py
backend/app/: config.py  main.py  middleware.py
backend/database/: postgres_client.py  qdrant_client.py
backend/fixtures/: rag_test_queries.json
backend/generation/: prompts.py  rag_chat.py
backend/ingestion/: chunker.py  embedder.py  main.py
backend/retrieval/: augmenter.py  (+2 more)
(+227 files in other folders)
